--- a/src/app/projects/Projects.module.css
+++ b/src/app/projects/Projects.module.css
@@ -21,16 +21,24 @@
     transform: translate(var(--_x, 0), var(--_y, 0));
     cursor: pointer;
     z-index: 0;
-    transition: 0.3s, z-index 0s 0.3s;
+    transition: transform 0.3s ease, clip-path 0.3s ease, filter 0.3s ease, z-index 0s 0.3s;
     position: absolute;
     top: 0;
     left: 0;
+    
+    /* Apply grayscale filter by default */
+    filter: grayscale(100%);
   }
   
   .gallery > img:hover {
     --_i: 1;
     z-index: 1;
-    transition: transform 0.2s, clip-path 0.3s 0.2s, z-index 0s;
+    
+    /* Remove grayscale filter on hover */
+    filter: grayscale(0%);
+    
+    /* Existing transitions */
+    transition: transform 0.2s ease, clip-path 0.3s ease 0.2s, filter 0.3s ease, z-index 0s;
   }
   
   .gallery:hover img {
@@ -88,4 +96,25 @@
       calc(120% * var(--_i, 0)) calc(100% - 50% * var(--_i, 0))
     );
     --_x: calc(-1 * var(--g));
+  }
+
+  /* Projects.module.css */
+
+.overlay {
+    /* Existing styles */
+    transition: opacity 0.3s ease;
+  }
+  
+  .modal {
+    /* Existing styles */
+    transform: translateY(-50px);
+    transition: transform 0.3s ease;
+  }
+  
+  .is-open .overlay {
+    opacity: 1;
+  }
+  
+  .is-open .modal {
+    transform: translateY(0);
   }
