--- a/src/app/projects/Projects.module.css
+++ b/src/app/projects/Projects.module.css
@@ -2,8 +2,7 @@
 
 .gallery {
     --g: 8px;   /* the gap */
-    --s: 600px; /* the size */
-    
+    --s: 40vw; /* the size */
     display: grid;
     border-radius: 50%;
     position: relative; /* Ensure proper positioning */
@@ -26,16 +25,12 @@
     top: 0;
     left: 0;
     
-    /* Apply grayscale filter by default */
-    filter: grayscale(100%);
   }
   
   .gallery > img:hover {
     --_i: 1;
     z-index: 1;
     
-    /* Remove grayscale filter on hover */
-    filter: grayscale(0%);
     
     /* Existing transitions */
     transition: transform 0.2s ease, clip-path 0.3s ease 0.2s, filter 0.3s ease, z-index 0s;
